// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrcView component 1 renders as expected 1`] = `
<div
  className="grc-view"
>
  <div
    className="module-grc-cards"
  >
    <div
      className="header-container"
    >
      <div
        className="header-title"
      >
        Summary
      </div>
      <div>
        <div
          aria-label="Summary"
          className="bx--dropdown selection bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="listbox"
          tabIndex={null}
        >
          <div
            aria-controls={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Summary"
            aria-owns={null}
            className="bx--list-box__field"
            data-toggle={true}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <span
              className="bx--list-box__label"
              htmlFor="downshift-0-input"
            >
              Standards
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                alt="Open menu"
                aria-label="Open menu"
                fillRule="evenodd"
                focusable="false"
                height="5"
                role="img"
                viewBox="0 0 10 5"
                width="10"
              >
                <title>
                  Open menu
                </title>
                <path
                  d="M0 0l5 4.998L10 0z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <button
        className="collapse"
        onClick={[Function]}
      >
        <span
          className="collapse-hint"
        >
          Want to see less information?
        </span>
        <span
          className="collapse-button"
        >
          Collapse summary
        </span>
        <svg
          alt="collapse"
          aria-label="collapse"
          className="arrow-up"
          fillRule="evenodd"
          height="7"
          name="chevron--up"
          role="img"
          viewBox="0 0 12 7"
          width="12"
        >
          <title>
            collapse
          </title>
          <path
            d="M5.994 1.45L.726 7 0 6.315 5.994 0l6.002 6.315L11.27 7z"
          />
        </svg>
      </button>
    </div>
    <div
      className="card-container-container"
    >
      <div>
        <div
          className="card-container"
        >
          <div
            className="card-content"
          >
            <div
              className="card-name"
            >
              NIST CSF
            </div>
            <div
              className="card-count-content"
            >
              <div
                className="card-count-container violated"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="card-count"
                >
                  <div
                    className="card-count-informations"
                  >
                    1
                  </div>
                  <div
                    className="card-count-total"
                  >
                    /1
                  </div>
                </div>
                <div
                  className="card-grc-type"
                >
                  Cluster violations
                </div>
              </div>
              <div
                className="card-count-container violated"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="card-count"
                >
                  <div
                    className="card-count-informations"
                  >
                    2
                  </div>
                  <div
                    className="card-count-total"
                  >
                    /2
                  </div>
                </div>
                <div
                  className="card-grc-type"
                >
                  Policy violations
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="module-toggle-tab"
  >
    <div>
      <div
        className="bx--data-table-v2-container"
        id="table-container"
      >
        <section
          aria-label="search"
          className="bx--table-toolbar"
          role="region"
        >
          <div
            className="bx--toolbar-search-container"
          >
            <div
              aria-labelledby="search-label"
              className="bx--search bx--search--sm bx--search--light"
              role="search"
            >
              <svg
                alt="Filter table"
                aria-label="Filter table"
                className="bx--search-magnifier"
                fillRule="evenodd"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  Filter table
                </title>
                <path
                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zm4.936-1.27l4.563 4.557-.707.708-4.563-4.558a6.5 6.5 0 1 1 .707-.707z"
                />
              </svg>
              <label
                className="bx--label"
                htmlFor="search"
                id="search-label"
              >
                Filter table
              </label>
              <input
                aria-label="search"
                className="bx--search-input"
                id="search"
                onChange={[Function]}
                placeholder="Find policies"
                type="text"
                value=""
              />
              <button
                className="bx--search-close bx--search-close--hidden"
                onClick={[Function]}
                type="button"
              >
                <svg
                  alt="Provide a description that will be used as the title"
                  aria-label="Provide a description that will be used as the title"
                  fillRule="evenodd"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    Provide a description that will be used as the title
                  </title>
                  <path
                    d="M8 6.586L5.879 4.464 4.464 5.88 6.586 8l-2.122 2.121 1.415 1.415L8 9.414l2.121 2.122 1.415-1.415L9.414 8l2.122-2.121-1.415-1.415L8 6.586zM8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="bx--toolbar-content"
          >
            <div
              className="module-toggle-tab-switch-strip"
            >
              <div
                className="module-toggle-tab-switch-makeup"
              />
              <div
                className="module-toggle-tab-switch"
              >
                <div
                  className="pf-c-toggle-group"
                  role="group"
                >
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-pressed={true}
                      className="pf-c-toggle-group__button pf-m-light pf-m-selected"
                      id="policies-0"
                      onClick={[Function]}
                    >
                      <span
                        className="pf-c-toggle-group__text"
                      >
                        Policies
                      </span>
                    </button>
                  </div>
                  <div
                    className="pf-c-divider pf-m-vertical"
                    role="separator"
                  />
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-pressed={false}
                      className="pf-c-toggle-group__button pf-m-light"
                      id="cluster-violations-1"
                      onClick={[Function]}
                    >
                      <span
                        className="pf-c-toggle-group__text"
                      >
                        Cluster violations
                      </span>
                    </button>
                  </div>
                  <div
                    className="pf-c-divider pf-m-vertical"
                    role="separator"
                  />
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-pressed={false}
                      className="pf-c-toggle-group__button pf-m-light"
                      id="applications-2"
                      onClick={[Function]}
                    >
                      <span
                        className="pf-c-toggle-group__text"
                      >
                        Applications
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <table
          className="bx--data-table-v2 resource-table bx--data-table-v2--zebra"
        >
          <thead>
            <tr>
              <th
                scope="col"
              />
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="metadata.name"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Policy name
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="namespace"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Namespace
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="remediation"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Remediation
                  </span>
                  <div
                    align="end"
                    className="bx--tooltip-icon"
                  >
                    <button
                      aria-label="Some policy controllers might not support the enforce feature. If the enforce feature is not supported by the controller, you must remediate it manually."
                      className="bx--tooltip__trigger bx--tooltip--icon__bottom"
                    >
                      <svg
                        className="info-icon"
                      >
                        <use
                          href="#diagramIcons_info"
                        />
                      </svg>
                    </button>
                  </div>
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="clusterCompliant"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Cluster violations
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="metadata.annotations[\\"policy.open-cluster-management.io/standards\\"]"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Standards
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="metadata.annotations[\\"policy.open-cluster-management.io/categories\\"]"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Categories
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              >
                <div
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="metadata.name"
                  data-key="metadata.annotations[\\"policy.open-cluster-management.io/controls\\"]"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Sort rows by this header in ascending order."
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Controls
                  </span>
                  
                  <svg
                    alt="Sort rows by this header in ascending order."
                    aria-label="Sort rows by this header in ascending order."
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in ascending order.
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody>
            <tr
              aria-hidden={false}
              className="bx--parent-row-v2"
              data-parent-row={true}
              data-row-name="policy-limitrange"
              disabled={false}
            >
              <td
                className="bx--table-expand-v2"
                headers="expand"
              >
                <button
                  aria-label="TableExpandRow"
                  className="bx--table-expand-v2__button"
                  onClick={[Function]}
                >
                  <svg
                    alt="Provide a description that will be used as the title"
                    aria-label="Provide a description that will be used as the title"
                    className="bx--table-expand-v2__svg"
                    fillRule="evenodd"
                    height="12"
                    role="img"
                    viewBox="0 0 7 12"
                    width="7"
                  >
                    <title>
                      Provide a description that will be used as the title
                    </title>
                    <path
                      d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
                    />
                  </svg>
                </button>
              </td>
              <td>
                <a
                  href="/undefined/all/calamari/policy-limitrange"
                  onClick={[Function]}
                >
                  policy-limitrange
                </a>
              </td>
              <td>
                calamari
              </td>
              <td>
                inform
              </td>
              <td>
                2/2
              </td>
              <td>
                HIPAA
              </td>
              <td>
                System And Communications Protections
              </td>
              <td>
                Cert Manager
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="menu"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              aria-hidden={false}
              className="bx--parent-row-v2"
              data-parent-row={true}
              data-row-name="policy-namespace"
              disabled={false}
            >
              <td
                className="bx--table-expand-v2"
                headers="expand"
              >
                <button
                  aria-label="TableExpandRow"
                  className="bx--table-expand-v2__button"
                  onClick={[Function]}
                >
                  <svg
                    alt="Provide a description that will be used as the title"
                    aria-label="Provide a description that will be used as the title"
                    className="bx--table-expand-v2__svg"
                    fillRule="evenodd"
                    height="12"
                    role="img"
                    viewBox="0 0 7 12"
                    width="7"
                  >
                    <title>
                      Provide a description that will be used as the title
                    </title>
                    <path
                      d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
                    />
                  </svg>
                </button>
              </td>
              <td>
                <a
                  href="/undefined/all/calamari/policy-namespace"
                  onClick={[Function]}
                >
                  policy-namespace
                </a>
              </td>
              <td>
                calamari
              </td>
              <td>
                enforce
              </td>
              <td>
                2/2
              </td>
              <td>
                NIST, HIPAA
              </td>
              <td>
                System And Communications Protections, System And Information Integrity
              </td>
              <td>
                Mutation Advisor
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="menu"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="bx--pagination"
        disabled={true}
      >
        <div
          className="bx--pagination__left"
        >
          <span
            className="bx--pagination__text"
          >
            items per page
          </span>
          <div
            className="bx--form-item"
          >
            <div
              className="bx--select bx--select--inline"
            >
              <label
                className="bx--label bx--visually-hidden"
                htmlFor="bx-pagination-select-resource-table-pagination"
              >
                items per page
              </label>
              <select
                className="bx--select-input"
                id="bx-pagination-select-resource-table-pagination"
                onChange={[Function]}
                value={10}
              >
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={5}
                >
                  5
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={10}
                >
                  10
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={20}
                >
                  20
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={50}
                >
                  50
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={75}
                >
                  75
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={100}
                >
                  100
                </option>
              </select>
              <svg
                alt="open list of options"
                aria-label="open list of options"
                className="bx--select__arrow"
                fillRule="evenodd"
                height="5"
                role="img"
                viewBox="0 0 10 5"
                width="10"
              >
                <title>
                  open list of options
                </title>
                <path
                  d="M0 0l5 4.998L10 0z"
                />
              </svg>
            </div>
          </div>
          <span
            className="bx--pagination__text"
          >
             |  
            {0}-{1} of {0} items
          </span>
        </div>
        <div
          className="bx--pagination__right bx--pagination--inline"
        >
          <button
            aria-label="Previous page"
            className="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Previous page"
              aria-label="Previous page"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Previous page
              </title>
              <path
                d="M1.45 6.002L7 11.27l-.685.726L0 6.003 6.315 0 7 .726z"
              />
            </svg>
          </button>
          <button
            aria-label="Next page"
            className="bx--pagination__button bx--pagination__button--forward"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Next page"
              aria-label="Next page"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Next page
              </title>
              <path
                d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GrcView component 2 renders as expected 1`] = `
<div
  aria-live="assertive"
  className="bx--loading content-spinner"
>
  <svg
    className="bx--loading__svg"
    viewBox="-75 -75 150 150"
  >
    <title>
      Active loading indicator
    </title>
    <circle
      className={null}
      cx="0"
      cy="0"
      r="37.5"
    />
  </svg>
</div>
`;

exports[`GrcView component 3 renders as expected 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--error overview-notification"
  kind="error"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      alt="closes notification"
      aria-label="closes notification"
      className="bx--inline-notification__icon"
      fillRule="evenodd"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        closes notification
      </title>
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM3.293 4.707l8 8 1.414-1.414-8-8-1.414 1.414z"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      >
        
      </p>
      <div
        className="bx--inline-notification__subtitle"
      >
        An unexpected error occurred. Try again.
      </div>
    </div>
  </div>
  <button
    className="bx--inline-notification__close-button"
    onClick={[Function]}
    title="close icon"
    type="button"
  >
    <svg
      alt="close icon"
      aria-label="close icon"
      className="bx--inline-notification__close-icon"
      fillRule="evenodd"
      height="10"
      role="img"
      viewBox="0 0 10 10"
      width="10"
    >
      <title>
        close icon
      </title>
      <path
        d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
      />
    </svg>
  </button>
</div>
`;

exports[`GrcView component 4 renders as expected 1`] = `
<div
  className="grc-view"
>
  <div
    className="module-grc-cards"
  >
    <div
      className="header-container card-collapsed"
    >
      <button
        className="collapse"
        onClick={[Function]}
      >
        <span
          className="collapse-hint"
        >
          Want to see your summary cards?
        </span>
        <span
          className="collapse-button"
        >
          Expand summary
        </span>
        <svg
          alt="expand"
          aria-label="expand"
          className="arrow-down"
          fillRule="evenodd"
          height="7"
          name="chevron--down"
          role="img"
          viewBox="0 0 12 7"
          width="12"
        >
          <title>
            expand
          </title>
          <path
            d="M6.002 5.55L11.27 0l.726.685L6.003 7 0 .685.726 0z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="module-toggle-tab"
  >
    <div
      aria-live="assertive"
      className="bx--loading content-spinner"
    >
      <svg
        className="bx--loading__svg"
        viewBox="-75 -75 150 150"
      >
        <title>
          Active loading indicator
        </title>
        <circle
          className={null}
          cx="0"
          cy="0"
          r="37.5"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`GrcView component 7 has create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/no-policy.svg"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        Get set-up to track your governance and risk.
      </div>
      <div
        className="no-resource-detail"
      >
        We noticed that you didn't have any policies created yet. You can view our documentation to see some samples for creating new policies, or you can go ahead and create one now!
      </div>
    </div>
    <div
      className="button-group"
    >
      <button
        className="bx--btn bx--btn--sm bx--btn--primary"
        disabled={false}
        id="create-resource"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        Create policy
        <svg
          alt="Provide icon description if icon is used"
          aria-hidden={true}
          aria-label="Provide icon description if icon is used"
          className="bx--btn__icon"
          fillRule="evenodd"
          height="16"
          name="add--glyph"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            Provide icon description if icon is used
          </title>
          <path
            d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm4 9H9v3H7V9H4V7h3V4h2v3h3v2z"
          />
        </svg>
      </button>
      <div
        className="buttons"
      >
        <button
          className="bx--btn bx--btn--sm bx--btn--secondary"
        >
          <a
            aria-describedby="launchWindow"
            className="doc-link"
            href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
            target="doc"
          >
            View documentation
          </a>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GrcView component 8 has not create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/no-policy.svg"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        Get set-up to track your governance and risk.
      </div>
      <div
        className="no-resource-detail"
      >
        We noticed that you didn't have any policies created yet. You can view our documentation to see some samples for creating new policies, or you can go ahead and create one now!
      </div>
    </div>
    <div
      className="button-group"
    >
      <button
        className="bx--btn bx--btn--sm bx--btn--primary bx--btn--disabled"
        disabled={true}
        id="create-resource"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        Create policy
        <svg
          alt="Provide icon description if icon is used"
          aria-hidden={true}
          aria-label="Provide icon description if icon is used"
          className="bx--btn__icon"
          fillRule="evenodd"
          height="16"
          name="add--glyph"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            Provide icon description if icon is used
          </title>
          <path
            d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm4 9H9v3H7V9H4V7h3V4h2v3h3v2z"
          />
        </svg>
      </button>
      <div
        className="buttons"
      >
        <button
          className="bx--btn bx--btn--sm bx--btn--secondary"
        >
          <a
            aria-describedby="launchWindow"
            className="doc-link"
            href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
            target="doc"
          >
            View documentation
          </a>
        </button>
      </div>
    </div>
  </div>
</div>
`;
